Refactoring entire source, separating into two modules. Database for state and hash for logic functions"

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-src/temp.txt
+src/core/temp.txt
 output/
 .vscode/
 database/winkel.db
 database/index.idx
-cmake-build-debug
+cmake-build-debug/
+test/
+src/frontend/
+build/
+docs/
