Restructered code; db_service connects UI to backend. Also created basic window logic for UI.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,25 @@ set(SOURCES
     src/core/main.cpp
     src/core/database.cpp
     src/core/hash.cpp
-    
+    src/frontend/window.cpp
+    src/services/db_service.cpp 
 )
+
 
 include_directories(include)
 
 
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+
+
 add_executable(hashbase ${SOURCES})
 
+
+target_link_libraries(hashbase ${SDL2_LIBRARIES})
+
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
+
 
 set(CMAKE_C_FLAGS "-Wall -Wextra -g -O2")
