--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,50 @@
-src/core/temp.txt
+
 output/
+*.o
+*.obj
+*.exe
+*.out
+*.a
+*.so
+*.dll
+*.dylib
+
+
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+
+
 .vscode/
-./idea
-cmake-build-debug/
-test/
-src/frontend/
-build/
-docs/
+
+
+
+
+
+Thumbs.db
+Desktop.ini
+
+
+*.log
+
+
+*.swp
+*.bak
+*.tmp
+
+
+test/unit_tests
+test/*.o
+
+test/unit_tests.cpp
+
+
+database/*.db
+database/*.idx
+
+
+output/
+
+
+docs/notes.md
