--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(HashBase)
 
 set(CMAKE_CXX_STANDARD 20)
 
-
+# List all source files
 set(SOURCES
     src/core/main.cpp
     src/core/database.cpp
@@ -11,22 +11,31 @@ set(SOURCES
     src/frontend/window.cpp
     src/services/db_service.cpp
     src/test/unit_tests.cpp
-
 )
+
+# Include directories
 include_directories(include)
 
-
+# Find SDL2
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
+# Find SDL2_ttf using pkg-config
+include(FindPkgConfig)
+pkg_check_modules(SDL2_TTF REQUIRED SDL2_ttf)
+include_directories(${SDL2_TTF_INCLUDE_DIRS})
 
+# Add executable
 add_executable(hashbase ${SOURCES})
 
+# Link libraries
+target_link_libraries(hashbase 
+    ${SDL2_LIBRARIES}
+    ${SDL2_TTF_LIBRARIES}
+)
 
-target_link_libraries(hashbase ${SDL2_LIBRARIES})
-
-
+# Set output directory
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
 
-
-set(CMAKE_C_FLAGS "-Wall -Wextra -g -O2")
+# Compiler flags
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -O2")
