Refactoring ui to seperate screens, UI still in progress

--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,19 @@ output/
 *.dll
 *.dylib
 
+
+
 # Ignore CMake build and config files
 CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
 Makefile
 
-# Ignore Visual Studio Code workspace settings
+build/
+cmake-build-debug/
+.idea/
 .vscode/
+
 
 # Ignore macOS files
 .DS_Store
