--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,28 @@ set(CMAKE_CXX_STANDARD 20)
 
 # List all source files
 set(SOURCES
-    src/core/main.cpp
-    src/core/database.cpp
-    src/core/hash.cpp
-    src/frontend/window.cpp
-    src/services/db_service.cpp
-    src/test/unit_tests.cpp
+    src/*.cpp
+    src/core/*.cpp
+    src/frontend/*.cpp
+    src/services/*.cpp
+    src/frontend/components/*.cpp
+    src/test/*.cpp
 )
 
 # Include directories
-include_directories(include)
+include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${SDL2_INCLUDE_DIRS})
+include_directories(${SDL2_TTF_INCLUDE_DIRS})
+
+# Get all source files
+file(GLOB_RECURSE SOURCES
+        "src/*.cpp"
+        "src/core/*.cpp"
+        "src/frontend/*.cpp"
+        "src/frontend/components/*.cpp"
+        "src/services/*.cpp"
+        "src/test/*.cpp"
+)
 
 # Find SDL2
 find_package(SDL2 REQUIRED)
@@ -29,7 +41,7 @@ include_directories(${SDL2_TTF_INCLUDE_DIRS})
 add_executable(hashbase ${SOURCES})
 
 # Link libraries
-target_link_libraries(hashbase 
+target_link_libraries(hashbase
     ${SDL2_LIBRARIES}
     ${SDL2_TTF_LIBRARIES}
 )
@@ -38,4 +50,4 @@ target_link_libraries(hashbase
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
 
 # Compiler flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -O2")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g")
