--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,5 @@
-# Ignore build outputs and temporary files
-output/
-*.o
-*.obj
-*.exe
-*.out
-*.a
-*.so
-*.dll
-*.dylib
-
-
-
-# Ignore CMake build and config files
-CMakeFiles/
-CMakeCache.txt
-cmake_install.cmake
-Makefile
-
-build/
-cmake-build-debug/
-.idea/
-.vscode/
-
-
-# Ignore macOS files
-.DS_Store
-
-# Ignore Windows files
-Thumbs.db
-Desktop.ini
-
-# Ignore dependency or lock files
-*.log
-
-# Ignore user-specific or backup files
-*.swp
-*.bak
-*.tmp
-
-
-# Ignore any compiled or generated files in database folder
-database/*.db
-database/*.idx
-
-# Ignore the output directory and any contents in it
-output/
-
-# Optional: Ignore documentation or temporary notes files (if not checked in)
-docs/notes.md
+output
+.idea
+.vscode
+build
+cmake-build-debug
